[package]
name = "mage_tactics"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["server", "shared"]

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.24"
futures = "0.3.26"
serde = { version = "1.0.152", features = ["derive"] }
serde-wasm-bindgen = "0.4"
shared = { path = "shared" }

[dependencies.web-sys]
version = "0.3.4"
features = [
    'CanvasRenderingContext2d',
    'CssStyleDeclaration',
    'console',
    'Document',
    'DomRect',
    'Element',
    'HtmlElement',
    'HtmlCanvasElement',
    'HtmlImageElement',
    'Node',
    'MouseEvent',
    'Touch',
    'TouchEvent',
    'TouchList',
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
]
