[package]
name = "maginet"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["server", "shared"]

[features]
deploy = []

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.24"
futures = "0.3.26"
serde = { version = "1.0.152", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
shared = { path = "shared" }
serde_json = "1.0.94"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.4"
features = [
    'CanvasRenderingContext2d',
    'CssStyleDeclaration',
    'console',
    'Document',
    'DomRect',
    'Element',
    'HtmlDocument',
    'HtmlElement',
    'HtmlCanvasElement',
    'HtmlImageElement',
    'KeyboardEvent',
    'Location',
    'Node',
    'MouseEvent',
    'Performance',
    'Touch',
    'TouchEvent',
    'TouchList',
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Storage',
    'Window',
]
